chore: initial project import

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SECRET_KEY=change-me
 ALLOWED_HOSTS=127.0.0.1,localhost
 
 BASE_URL=https://api.siliconflow.cn/v1
-API_KEY=sk-mkhxuabgykfubuqszgnkuebmbwaanbiypdflcksgfipsiddp
+API_KEY=你的api-key
 
 QWEN_MODEL=Qwen/Qwen2.5-14B-Instruct
 DEEPSEEK_MODEL=deepseek-ai/DeepSeek-V3
