--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,24 @@ OPENAI_MAX_RETRIES=2
 VECTOR_BACKEND=faiss
 VSTORE_PATH=data/faiss.index
 VSTORE_META=data/chunks.jsonl
-# DATABASE_URL=postgres://user:pass@host:5432/dbname
+
+# MySQL (preferred) connection settings
+# DATABASE_URL=mysql://user:pass@127.0.0.1:3306/classweaver
+MYSQL_DATABASE=classweaver
+MYSQL_USER=root
+MYSQL_PASSWORD=
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
+MYSQL_CHARSET=utf8mb4
 
 AGENTSCOPE_ENABLED=false
 RAG_ENABLED=true
 
 FRONTEND_ORIGIN=http://127.0.0.1:5173
 VITE_API_BASE=http://127.0.0.1:8000
+CSRF_TRUSTED_ORIGINS=http://127.0.0.1:5173,http://localhost:5173
+SESSION_COOKIE_SAMESITE=None
+SESSION_COOKIE_SECURE=false
+CSRF_COOKIE_SAMESITE=None
+CSRF_COOKIE_SECURE=false
+FRONTEND_ORIGIN=http://127.0.0.1:5173
