--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 django>=5.0,<6.0
 djangorestframework>=3.15,<3.16
 python-dotenv>=1.0
+mysqlclient>=2.2
 openai>=1.43
 faiss-cpu>=1.7.4
 numpy>=1.26
